// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`req.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
module.exports = 0;

=====================================output=====================================
module.exports = 0;

================================================================================
`;

exports[`test.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
var x = require('./req');
(x: string);

import x from './req';

=====================================output=====================================
var x = require("./req");
(x: string);

import x from "./req";

================================================================================
`;
